# nuts

./: .env  AGENTS.md  README.md  compose.deploy.yml  compose.yml  devenv.nix  devenv.yaml  pnpm-lock.yaml  pnpm-workspace.yaml
apps/client/: .env  .prettierrc  Dockerfile  TODO.md  components.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/client/public/: manifest.json  sw.js
apps/client/src/: app.tsx  index.css  main.tsx  routeTree.gen.ts  router.tsx
apps/marketing/: README.md  package.json  pnpm-lock.yaml
apps/marketing/src/: content.config.ts
apps/mobile/: app.config.ts  app.json  babel.config.js  env.js  eslint.config.js  eslint.config.mjs  global.css  metro.config.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/mobile/android/: settings.gradle
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/components/: add-account-modal.tsx  add-transaction-modal.tsx  sync-status-indicator.tsx
apps/mobile/lib/: haptics.ts  query-client.ts  utils.ts
apps/mobile/modules/expo-automerge-crdt/rust/: Cargo.toml
apps/mobile/modules/expo-automerge-crdt/rust/src/: lib.rs
apps/mobile/stores/: auth.store.ts  dashboard.store.ts  onboarding.store.ts  preferences.store.ts
docs/: OFFLINE-FIRST-DATA-FLOW.md  PLUGIN_TESTING_GUIDE.md  README.md  SYNC-TESTING-GUIDE.md  go.md  ts.md
server/: README.md
server/database/migrations/: 20251111000000_migrations_table.sql  20251113000000_notifications_and_inbox.sql  20251114000000_consolidate_user_name.sql  (+1 more)
(+611 files in other folders)
