[package]
name = "expo_automerge"
version = "0.1.0"
edition = "2021"

[lib]
name = "expo_automerge"
crate-type = ["staticlib", "cdylib"]

[dependencies]
automerge = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
